snapshots/syntax/statements/control_flow/on_statements/on_error_with_whitespace.snap
---
source: src/syntax/statements/control_flow/on_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OnErrorStatement
      children:
        - kind: OnKeyword
          text: "On"
        - kind: Whitespace
          text: "    "
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: "    "
        - kind: GotoKeyword
          text: GoTo
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Handler
        - kind: Newline
          text: "\n"
