snapshots/syntax/statements/control_flow/on_statements/on_gosub_at_module_level.snap
---
source: src/syntax/statements/control_flow/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OnGoSubStatement
      children:
        - kind: OnKeyword
          text: "On"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: choice
        - kind: Whitespace
          text: " "
        - kind: GoSubKeyword
          text: GoSub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Sub1
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Sub2
